--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "statica",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "A Roots v3 plugin for transforming boring html files into pretty URIs",
   "main": "lib",
   "directories": {
@@ -19,6 +19,10 @@
   ],
   "author": "Mark C.",
   "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:chasevida/statica.git"
+  },
   "devDependencies": {
     "chai": "^1.10.0",
     "coffee-script": "^1.8.0",
